infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
         app: comments
    spec:
      containers:
        - name: comments
          image: ajayjb/comments

---

apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments-clusterip
      protocol: TCP
      port: 3010
      targetPort: 3010
