infra/k8s/query-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
         app: query-service
    spec:
      containers:
        - name: query-service
          image: ajayjb/query-service

---

apiVersion: v1
kind: Service
metadata:
  name: query-service-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: query-service
  ports:
    - name: query-service-clusterip
      protocol: TCP
      port: 3015
      targetPort: 3015
