infra/k8s/query-service-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort
  selector:
    app: query-service
  ports:
    - name: comments
      protocol: TCP
      port: 6002
      targetPort: 3015
      nodePort: 30009
